--- a/mkdocs/mkdocs.yml
+++ b/mkdocs/mkdocs.yml
@@ -1,13 +1,13 @@
 site_name: My Notes
 
-nav:
-  - Home: index.md
-  - Chapter 1:
-      - Introduction : 1_chapter/1_lesson.md
-  - Chapter 2:
-      - Introduction : 2_chapter/1_lesson.md
-  - Chapter 3:
-      - Introduction : 3_chapter/1_lesson.md
+# nav:
+#   - Home: index.md
+#   - Chapter 1:
+#       - Introduction : 1_chapter/1_lesson.md
+#   - Chapter 2:
+#       - Introduction : 2_chapter/1_lesson.md
+#   - Chapter 3:
+#       - Introduction : 3_chapter/1_lesson.md
 
 copyright: Site developed and maintained by <a href="https://abhigupta.io">Abhinav Gupta</a>
 extra_css:
